@@ -167,4 +167,9 @@ function bankaccount($id, $account=NULL)
 	return $account;
 }
 
+function beautify_bankaccount($account)
+{
+	return preg_replace('/(..)(....)(....)(....)(....)(....)(....)/i', '${1} ${2} ${3} ${4} ${5} ${6} ${7}', $account);
+}
+
 ?>
