@@ -113,4 +113,9 @@ function bankaccount($id, $account=NULL)
 	return $account;
 }
 
+function beautify_bankaccount($account)
+{
+	return $account;
+}
+
 ?>
