@@ -182,7 +182,7 @@
 			<IMG SRC="img/card.gif" ALT="">
 		</TD>
 		<TD WIDTH="99%" NOWRAP>
-			{$customerinfo.bankaccount}
+			{beautify_bankaccount($customerinfo.bankaccount)}
 		</TD>
 	</TR>
 {/if}
