@@ -41,7 +41,7 @@
 			<B>{trans("Seller:")}</B><BR>
 			<BR>
 			{$invoice.division_header|replace:"\n":"<BR>"}<BR>
-			{trans("Bank account:")} {bankaccount($invoice.customerid, $invoice.account)}
+			{trans("Bank account:")} {beautify_bankaccount(bankaccount($invoice.customerid, $invoice.account))}
 			<BR><BR>
 			<B>{trans("Purchaser:")}</B><BR>
 			<BR>
